<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#ffffff">

    <TextView
        android:id="@+id/schedule_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/reminder"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <!-- Show selected start and end time field-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/start_time_hint"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_small"
            android:hint="@string/end_time_hint"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/create_button"
            android:textSize="18sp"
            android:background="@drawable/btn_bg_blue"
            android:textColor="@color/white"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/margin_extra_small">

            <CalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"/>

        </ScrollView>

    </android.support.v7.widget.CardView>

    <!-- Set start and end time buttons-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <Button
            android:id="@+id/select_start_time"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/start_time_button"
            android:background="@drawable/btn_bg_blue"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/select_end_time"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/end_time_button"
            android:background="@drawable/btn_bg_blue"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>