<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cake"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"/>

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_birthday"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <Button
            android:id="@+id/change_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/change"
            android:background="@drawable/btn_bg_blue"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/update"
            android:background="@drawable/btn_bg_blue"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>