<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gender"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"/>

    <!-- Female -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginLeft="@dimen/margin_medium"
            android:textSize="24sp"/>

        <CheckBox
            android:id="@+id/female_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


    <!-- Male -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginLeft="@dimen/margin_medium"
            android:textSize="24sp"/>

        <CheckBox
            android:id="@+id/male_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/cancel"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg_blue"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>