<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff">

    <ImageView
        android:layout_width="150.0dip"
        android:layout_height="150.0dip"
        android:src="@drawable/head"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <!-- First Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@android:color/black"
            android:paddingTop="@dimen/margin_small"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_login"
            android:textColor="@color/greeny"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <!-- Last Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@android:color/black"
            android:paddingTop="@dimen/margin_small"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_login"
            android:textColor="@color/greeny"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/cancel"
            android:background="@drawable/btn_bg_blue"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/btn_bg_blue"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>